# phlist-server

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  phlist_server.py  pyproject.toml  requirements.txt
scripts/agent/: gen_api_key.py
static/: dashboard.js  style.css
systemd/: phlist-server.service
templates/: dashboard.html
tests/: test_server.py
